Fixed typo in documentation.

--- a/redis-default.conf
+++ b/redis-default.conf
@@ -4,14 +4,12 @@ daemonize yes
 
 pidfile ./pid
 
-bind 192.168.100.218
-
 loglevel notice
 logfile ./log
 
 timeout 300
 
-### This will be deprecated in future version of Redis.
+### This will be deprecated in a future version of Redis.
 
 databases 1
 
