--- a/redis-default.conf
+++ b/redis-default.conf
@@ -1,44 +1,18 @@
-############################## BASIC CONFIGURATION ############################
+################################ GENERAL  #####################################
 
 daemonize yes
 
 pidfile ./pid
-
-loglevel notice
 logfile ./log
-
-timeout 300
 
 ### This will be deprecated in a future version of Redis.
 
 databases 1
 
-################################ SNAPSHOTTING #################################
+################################ SNAPSHOTTING  ################################
 
-save 1200 1
+save 60 10000
 
-rdbcompression yes
+stop-writes-on-bgsave-error no
+
 dbfilename dump.rdb
-
-############################## APPEND ONLY MODE ###############################
-
-appendonly no
-appendfsync everysec
-no-appendfsync-on-rewrite no
-
-################################## SLOW LOG ###################################
-
-slowlog-log-slower-than 10000
-slowlog-max-len 1024
-
-############################### ADVANCED CONFIG ###############################
-
-hash-max-ziplist-entries 512
-hash-max-ziplist-value 64
-
-list-max-ziplist-entries 512
-list-max-ziplist-value 64
-
-set-max-intset-entries 512
-
-activerehashing yes
