--- a/redis-default.conf
+++ b/redis-default.conf
@@ -5,6 +5,8 @@ daemonize yes
 pidfile ./pid
 logfile ./log
 
+timeout 30
+
 ### This will be deprecated in a future version of Redis.
 
 databases 1
