Protected mode disabled
Assume default of no for protected mode as instance will be behind a private network interface.

--- a/redis-default.conf
+++ b/redis-default.conf
@@ -5,6 +5,8 @@ daemonize yes
 pidfile ./pid
 logfile ./log
 
+protected-mode no
+
 ### This will be deprecated in a future version of Redis.
 
 databases 1
